<resources>
    <string name="app_name">InventoryApp</string>

    <string name="product_name">Name:</string>

    <string name="product_price">Price:</string>

    <string name="product_quantity">Quantity:</string>

    <string name="supplier_name">Supplier Name:</string>

    <string name="supplier_email">Supplier Email:</string>

    <string name="supplier_number">Supplier Number:</string>

    <string name="action_save">Save</string>

    <string name="pet_insert_success">Product Saved</string>

    <string name="pet_insert_fail">Error with saving product</string>

    <string name="sale">Sale</string>

    <string name="empty_view">Press the floating button to add a product.</string>

    <string name="action_edit">Edit</string>

    <string name="title_edit_product">Edit Product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <string name="action_delete">Delete</string>

    <string name="delete_dialog_msg">Delete this product?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="delete_success">Delete successful</string>

    <string name="delete_error">Error with deleting the product</string>

    <string name="delete_all">Delete all products</string>

    <string name="sold_out">Product sold out!</string>

    <string name="title_add_product">Add product</string>

    <string name="call">Call</string>

    <string name="add_quantity">Add</string>

    <string name="sell_quantity">Sell</string>

</resources>
